# sumup-rs

./: .release-please-manifest.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  openapi.json  openapi.yaml  release-please-config.json  release-plz.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yaml  generate.yaml  release-plz.yaml  release.yaml
codegen/: Cargo.toml
codegen/src/: body.rs  client.rs  event.rs  lib.rs  operation.rs  schema.rs  tag.rs
examples/: card_reader_checkout.rs  checkout_card_reader.rs  events.rs  oauth2.rs  webhooks.rs
sdk/: CHANGELOG.md  Cargo.toml  build.rs
sdk/src/: api_version.rs  auth.rs  client.rs  datetime.rs  error.rs  event.rs  events.rs  events_handler.rs  lib.rs  nullable.rs  secret.rs  string_or_number.rs  trace.rs  version.rs  webhooks.rs
sdk/src/resources/: checkouts.rs  common.rs  customers.rs  members.rs  memberships.rs  merchant.rs  merchants.rs  mod.rs  payouts.rs  readers.rs  receipts.rs  roles.rs  subaccounts.rs  transactions.rs
sdk/tests/: client.rs
xtask/: Cargo.toml
xtask/src/: main.rs
