[package]
name = "sumup"
version = "0.0.1"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"
rust-version = "1.82"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "checkout_card_reader"
path = "../examples/checkout_card_reader.rs"
