[package]
name = "sumup"
description = "Rust SDK for the SumUp API."
documentation = "https://docs.rs/sumup"
version = "0.5.4"
edition = "2021"
rust-version = "1.82"
readme = "../README.md"
authors = ["Matous Dzivjak <matous.dzivjak@sumup.com>"]
categories = ["api-bindings", "finance"]
license = "Apache-2.0"
repository = "https://github.com/sumup/sumup-rs"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "serde",
], optional = true }
jiff = { version = "0.2", default-features = false, features = [
  "serde",
], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "default-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.2"
wiremock = "0.6"
uuid = { version = "1.19", features = ["serde", "v4"] }
oauth2 = { version = "5.0.0", default-features = false, features = [
  "reqwest",
  "rustls-tls",
] }
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }

[[example]]
name = "checkout_card_reader"
path = "../examples/card_reader_checkout.rs"

[[example]]
name = "oauth2"
path = "../examples/oauth2.rs"
